--- a/howler/static/style.css
+++ b/howler/static/style.css
@@ -1,5 +1,6 @@
 body{
-    font-family: "Roboto", "Lucida Grande", Verdana, Arial, sans-serif
+    font-family: "Roboto", "Lucida Grande", Verdana, Arial, sans-serif;
+    font-size: 11pt;
 }
 
 /*Containers*/
@@ -32,4 +33,8 @@ h2 {
 }
 em {
     background:yellow;
+}
+p {
+    margin-top: 0px;
+    margin-bottom: 2px;
 }
