--- a/howler/templates/base.html
+++ b/howler/templates/base.html
@@ -4,6 +4,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="{% static "style.css" %}" />
+    <script type="text/javascript" src='{% static 'jquery/jquery.js' %}'></script>
     <title>Wally e-mail search</title>
     {% block head %}
 
