--- a/howler/wally_search/templates/wally/detail.html
+++ b/howler/wally_search/templates/wally/detail.html
@@ -1,5 +1,5 @@
 {% extends "wally/base_wally.html" %}
 
-{% block content %}
-    detail
+{% block main %}
+    <h1 class="page-header">Detail</h1>
 {% endblock %}
