--- a/howler/wally_search/static/wally/style_wally.css
+++ b/howler/wally_search/static/wally/style_wally.css
@@ -2,19 +2,10 @@
     background: white url("img/wally100.png") no-repeat right bottom;
 }
 
-input.fulltext{
-    width: 50em;
+table.table-emails tbody>tr:last-child>td{
+    padding-bottom: 30px;
 }
 
-div.hits{
-
-}
-div.hit {
-    padding: 2px;
-    background-color: #f9f9f9;
-    margin: 2px;
-}
-p.fragment {
-    border-top: 1px dotted lightgrey;
-    border-bottom: 1px dotted lightgrey;
+.js_hit {
+    cursor: pointer;
 }
