--- a/howler/wally_search/templates/wally/search.html
+++ b/howler/wally_search/templates/wally/search.html
@@ -1,24 +1,30 @@
 {% extends "wally/base_wally.html" %}
 
-{% block content %}
-    <h2>email search</h2>
+{% block main %}
+    <h1 class="page-header">Email search</h1>
     <p>Welcome to Wally the email search! Please input at least one of the fields below to search your emails.</p>
 
     {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
     <form action="{% url 'wally:find' %}" method="get">
-        <input type="text" name="query" class="fulltext" id="query" />
-        <label for="query">full-text search</label><br />
-
-        <label for="from">from:</label>
-        <input type="datetime-local" name="from" id="from"  />
-        <label for="to">to:</label>
-        <input type="datetime-local" name="to" id="to" />
-        <br />
-
-        <input type="checkbox" name="include_spam" id="include_spam"/>
-        <label for="include_spam">include spam mails</label>
-        <br />
+        <div class="form-group">
+            <label for="query">full-text search</label>
+            <input type="text" class="form-control" name="query" class="fulltext" id="query"
+                   placeholder="full-text search"/>
+        </div>
+        <div class="form-group">
+            <label for="from">From</label>
+            <input type="datetime-local" class="form-control" name="from" id="from"/>
+        </div>
+        <div class="form-group">
+            <label for="to">To</label>
+            <input type="datetime-local" class="form-control" name="to" id="to"/>
+        </div>
+        <div class="checkbox">
+            <label>
+                <input type="checkbox" name="include_spam" id="include_spam"/> include spam
+            </label>
+        </div>
         <input type="submit" value="Search" />
     </form>
     {##}
