--- a/howler/templates/base.html
+++ b/howler/templates/base.html
@@ -2,91 +2,92 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <link rel="icon" href="../../favicon.ico">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="{% static 'img/favicon.ico' %}">
 
-        <title>Wally e-mail search</title>
+    <title>Wally e-mail search</title>
 
-        <link rel="stylesheet" href="{% static 'style.css' %}" />
+    <link rel="stylesheet" href="{% static 'style.css' %}"/>
 
-        <!-- Bootstrap core CSS -->
-        <link rel="stylesheet" href="{% static 'bootstrap/dist/css/bootstrap.css' %}" /><!--TODO: USE MIN!-->
+    <link rel="stylesheet" href="{% static 'bootstrap/dist/css/bootstrap.css' %}"/><!--TODO: USE MIN!-->
+    <link rel="stylesheet" href="{% static 'dashboard.css' %}">
+    <link rel="stylesheet"
+          href="{% static 'eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css' %}"/>
 
-        <!-- Custom styles for this template -->
-        <link rel="stylesheet" href="{% static 'dashboard.css' %}">
+    <link rel="stylesheet" href="{% static "style.css" %}"/>
+    {% block head %}
 
+    {% endblock %}
+</head>
 
-        <link rel="stylesheet" href="{% static "style.css" %}" />
-        {% block head %}
+<body>
 
-        {% endblock %}
-    </head>
-
-    <body>
-
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                            aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="{% url 'wally:search' %}"><!--TODO: Fix relative path to app, use urls instaed-->
-                        <div class="content">
-                            <img src="{% static "img/howler50text.png" %}"/>
-                            {% block header_content %}
-
-                            {% endblock %}
-                        </div>
-                    </a>
-                </div>
-                <div id="navbar" class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <!--<li><a href="{% url 'wally:search' %}">Search</a></li>-->
-                        <li><a href="#">Settings</a></li>
-                        <!--<li><a href="#">Help</a></li>-->
-                    </ul>
-                    <form class="navbar-form navbar-right" action="{% url 'wally:find' %}" method="get">
-                        <input type="text" class="form-control" name="query" class="fulltext" id="query"
-                               placeholder="Email search..."/>
-                    </form>
-                </div>
-            </div>
-        </nav>
-
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-3 col-md-2 sidebar">
-                    {% block sidebar %}
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{% url 'wally:search' %}">
+                <!--TODO: Fix relative path to app, use urls instaed-->
+                <div class="content">
+                    <img src="{% static "img/howler50text.png" %}"/>
+                    {% block header_content %}
 
                     {% endblock %}
                 </div>
-            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                {% block main %}
-
-                {% endblock %}
-
-
-
-            </div>
-          </div>
+            </a>
         </div>
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <!--<li><a href="{% url 'wally:search' %}">Search</a></li>-->
+                <li><a href="#">Settings</a></li>
+                <!--<li><a href="#">Help</a></li>-->
+            </ul>
+            <form class="navbar-form navbar-right" action="{% url 'wally:find' %}" method="get">
+                <input type="text" class="form-control" name="query" class="fulltext" id="query"
+                       placeholder="Email search..."/>
+            </form>
+        </div>
+    </div>
+</nav>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-3 col-md-2 sidebar">
+            {% block sidebar %}
+
+            {% endblock %}
+        </div>
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+            {% block main %}
+
+            {% endblock %}
+        </div>
+    </div>
+</div>
 
 
-        <script type="text/javascript" src='{% static 'jquery/dist/jquery.js' %}'></script>
-        <script type="text/javascript" src='{% static 'bootstrap/dist/js/bootstrap.js' %}'></script><!--TODO: USE MIN!-->
+<script type="text/javascript" src='{% static 'jquery/dist/jquery.js' %}'></script>
+<script type="text/javascript" src='{% static 'bootstrap/dist/js/bootstrap.js' %}'></script><!--TODO: USE MIN!-->
 
-        {% block scripts %}
+<script type="text/javascript" src="{% static 'moment/min/moment.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'moment/locale/ja.js' %}"></script>
+<script type="text/javascript"
+        src="{% static 'eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js' %}"></script>
 
-        {% endblock %}
-    </body>
+{% block scripts %}
+
+{% endblock %}
+</body>
 </html>
