--- a/howler/wally_search/templates/wally/search.html
+++ b/howler/wally_search/templates/wally/search.html
@@ -1,31 +1,63 @@
 {% extends "wally/base_wally.html" %}
 
 {% block main %}
-    <h1 class="page-header">Email search</h1>
-    <p>Welcome to Wally the email search! Please input at least one of the fields below to search your emails.</p>
+    <div class="row">
+        <div class='col-md-10'>
+            <h1 class="page-header">Email search</h1>
+            <p>Welcome to Wally the email search! Please input at least one of the fields below to search your
+                emails.</p>
 
-    {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-
+            {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+        </div>
+    </div>
     <form action="{% url 'wally:find' %}" method="get">
-        <div class="form-group">
-            <label for="query">full-text search</label>
-            <input type="text" class="form-control" name="query" class="fulltext" id="query"
-                   placeholder="full-text search"/>
+        <div class="row">
+            <div class='col-md-10'>
+                <div class="form-group">
+                    <label for="query">Full-text search</label>
+                    <input type="text" class="form-control" name="query" class="fulltext" id="query"
+                           placeholder="Full-text search"/>
+                </div>
+            </div>
         </div>
-        <div class="form-group">
-            <label for="from">From</label>
-            <input type="datetime-local" class="form-control" name="from" id="from"/>
+        <div class="row">
+            <div class='col-md-5'>
+                <div class="form-group">
+                    <label for="from">From</label> - JST time
+                    <div class='input-group date' id='datetimepicker-from'>
+                        <input type='text' class="form-control" name="from"/>
+                        <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-calendar"></span>
+                            </span>
+                    </div>
+                </div>
+            </div>
+            <div class='col-md-5'>
+                <div class="form-group">
+                    <label for="to">To</label> - JST time
+                    <div class='input-group date' id='datetimepicker-to'>
+                        <input type='text' class="form-control" name="to"/><!--type="datetime-local"-->
+                        <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-calendar"></span>
+                            </span>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="form-group">
-            <label for="to">To</label>
-            <input type="datetime-local" class="form-control" name="to" id="to"/>
+        <div class="row">
+            <div class='col-md-5'>
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" name="include_spam" id="include_spam"/> include spam
+                    </label>
+                </div>
+            </div>
         </div>
-        <div class="checkbox">
-            <label>
-                <input type="checkbox" name="include_spam" id="include_spam"/> include spam
-            </label>
+        <div class="row">
+            <div class='col-md-5'>
+                <input type="submit" value="Search"/>
+            </div>
         </div>
-        <input type="submit" value="Search" />
     </form>
     {##}
     {#POST:#}
