--- a/howler/wally_search/templates/wally/search.html
+++ b/howler/wally_search/templates/wally/search.html
@@ -25,7 +25,7 @@
                 <div class="form-group">
                     <label for="from">From</label> - JST time
                     <div class='input-group date' id='datetimepicker-from'>
-                        <input type='text' class="form-control" name="from"/>
+                        <input type='text' class="form-control" name="from" placeholder="2012/11/01 00:00"/>
                         <span class="input-group-addon">
                                 <span class="glyphicon glyphicon-calendar"></span>
                             </span>
@@ -36,7 +36,7 @@
                 <div class="form-group">
                     <label for="to">To</label> - JST time
                     <div class='input-group date' id='datetimepicker-to'>
-                        <input type='text' class="form-control" name="to"/><!--type="datetime-local"-->
+                        <input type='text' class="form-control" name="to" placeholder="2016/10/31 12:18"/><!--type="datetime-local"-->
                         <span class="input-group-addon">
                                 <span class="glyphicon glyphicon-calendar"></span>
                             </span>
