--- a/howler/wally_search/templates/wally/results.html
+++ b/howler/wally_search/templates/wally/results.html
@@ -1,105 +1,111 @@
-{% extends "wally/base_wally.html" %}
+{# {% extends "wally/base_wally.html" %}#}
 
-{% block main %}
+{#  {% block main %}#}
 {#    <h1 class="page-header">Results</h1>#}
-    <h2 class="sub-header">Hits for: {{ query }} <a class="btn btn-default" href="{% url 'wally:search' %}">Back to search</a>  </h2>
+{#    <h2 class="sub-header">Hits for: {{ query }} <a class="btn btn-default" href="{% url 'wally:search' %}">Back to search</a>  </h2>#}
 
 
 
-    {% if hit_list %}
-        <div class="table-responsive">
-            <table class="table table-emails">
-                <thead>
-                <tr>
-                    <th>Subject</th>
-                    <th>Search score</th>
-                    <th>Sent</th>
-                    <th>Sender</th>
-                    <th>Receiver</th>
-                    <th>Language</th>
-                    <th>% Language</th>
-                </tr>
-                </thead>
-                {% for hit in hit_list %}
-                    <tbody>
-                        <tr class="js_hit success">
-                            <td>
-                                <b>
-                                {% if hit.meta.highlight.subject.0 %}
-                                    {{ hit.meta.highlight.subject.0|safe }}
-                                {% else %}
-                                    {{ hit.subject }}
-                                {% endif %}
-                                </b>
-                            </td>
-                            <td>{{ hit.meta.score }}</td>
-                            <td>{{ hit.date }}</td>
-                            <td>
-                                {% if hit.meta.highlight.fromEmail.0 %}
-                                    {{ hit.meta.highlight.fromEmail.0|safe }}
-                                {% else %}
-                                    {{ hit.fromEmail }}
-                                {% endif %}
-                            </td>
-                            <td>
-                                {% if hit.meta.highlight.toEmail.0 %}
-                                    {{ hit.meta.highlight.toEmail.0|safe }}
-                                {% else %}
-                                    {{ hit.toEmail }}
-                                {% endif %}
-                            </td>
-                            <td>{{ hit.langCode }}</td>
-                            <td>{{ hit.langPercent }}</td>
-                        </tr>
-                        <tr class="js_hit_content">
-                            <td class="hit_content" colspan="7">
-                                {% if hit.meta.highlight.replyToEmail.0 %}
-                                    <p class="fragment">
-                                        <b>Hit in Reply-To Email/Name:</b> {{ hit.meta.highlight.replyToEmail.0|safe }} {{ hit.meta.highlight.replyToName.0|safe }}
-                                    </p>
-                                {% endif %}
+{% if hit_list %}
+    {% for hit in hit_list %}
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="row">
+                    <div class='col-md-10'>
+                        <label>Subject:</label>
+                        {% if hit.meta.highlight.subject.0 %}
+                            {{ hit.meta.highlight.subject.0|safe }}
+                        {% else %}
+                            {{ hit.subject }}
+                        {% endif %}
+                    </div>
+                    <div class='col-md-2'>
+                        <label>Score:</label> {{ hit.meta.score|floatformat:1 }}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class='col-md-3'>
+                        <label>Sent:</label> {{ hit.date }}
+                    </div>
+                    <div class='col-md-3'>
+                        <label>Sender:</label>
+                        {% if hit.meta.highlight.fromEmail.0 %}
+                            {{ hit.meta.highlight.fromEmail.0|safe }}
+                        {% else %}
+                            {{ hit.fromEmail }}
+                        {% endif %}
+                    </div>
+                    <div class='col-md-4'>
+                        <label>Receiver:</label>
+                        {% if hit.meta.highlight.toEmail.0 %}
+                            {{ hit.meta.highlight.toEmail.0|safe }}
+                        {% else %}
+                            {{ hit.toEmail }}
+                        {% endif %}
+                    </div>
+                    <div class='col-md-2'>
+                        <label>Langauge:</label>
+                        {{ hit.langCode }} ({{ hit.langPercent }}%)
+                    </div>
+                </div>
+            </div>
+            <div class="panel-body">
+                {% if hit.meta.highlight.replyToEmail.0 %}
+                    <p class="fragment">
+                        <b>Hit in Reply-To
+                            Email/Name:</b> {{ hit.meta.highlight.replyToEmail.0|safe }} {{ hit.meta.highlight.replyToName.0|safe }}
+                    </p>
+                {% endif %}
 
-                                {% if hit.meta.highlight.fromName.0 %}
-                                    <p class="fragment">
-                                        <b>Hit in sender name:</b> {{ hit.meta.highlight.fromName.0|safe }}
-                                    </p>
-                                {% endif %}
+                {% if hit.meta.highlight.fromName.0 %}
+                    <p class="fragment">
+                        <b>Hit in sender name:</b> {{ hit.meta.highlight.fromName.0|safe }}
+                    </p>
+                {% endif %}
 
-                                {% if hit.meta.highlight.toName.0 %}
-                                    <p class="fragment">
-                                        <b>Hit in receiver name:</b> {{ hit.meta.highlight.toName.0|safe }}
-                                    </p>
-                                {% endif %}
+                {% if hit.meta.highlight.toName.0 %}
+                    <p class="fragment">
+                        <b>Hit in receiver name:</b> {{ hit.meta.highlight.toName.0|safe }}
+                    </p>
+                {% endif %}
 
-                                <b>Hits in body:</b>
-                                {% for fragment in hit.meta.highlight.body %}
-                                    <p class="fragment">
-                                        {{ fragment|safe|linebreaks }}
-                                    </p>
-                                {% endfor %}
+                {% if hit.meta.highlight.body %}
+                    <b>Hits in body:</b>
+                    {% for fragment in hit.meta.highlight.body %}
+                        <p class="fragment">
+                            {{ fragment|safe|linebreaks }}
+                        </p>
+                    {% endfor %}
+                {% endif %}
 
-                                <p class=" js_showmail_btn">
-                                    <a class="btn btn-success">View Email</a>
-                                </p>
+                <div class="panel-group">
+                    <div class="panel panel-success">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" href="#collapse{{ forloop.counter0 }}">View email content</a>
+                            </h4>
+                        </div>
+                        <div id="collapse{{ forloop.counter0 }}" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <div class="well">
+                                    <p><b>Sender:</b> {{ hit.fromName }} &lt;{{ hit.fromEmail }}&gt;</p>
+                                    <p><b>Receiver:</b> {{ hit.toName }} &lt;{{ hit.toEmail }}&gt;</p>
 
-                                <div class="js_text mailcontent collapse">
-                                    <blockquote>
-{#                                        {% for fragment in hit.meta.highlight.body %}#}
-{#                                            {{ fragment|safe|linebreaks}}#}
-{#                                        {% endfor %}#}
-                                        <p><b>Sender:</b> {{ hit.fromName }} &lt;{{ hit.fromEmail }}&gt;</p>
-                                        <p><b>Receiver:</b> {{ hit.toName }} &lt;{{ hit.toEmail }}&gt;</p>
-
-                                         {{ hit.body|linebreaks}}#}
-                                    </blockquote>
+                                    {{ hit.body|linebreaks }}#}
                                 </div>
-                            </td>
-                        </tr>
-                    </tbody>
-                {% endfor %}
-            </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    {% else %}
-        <p>No emails found.</p>
-    {% endif %}
-{% endblock %}
+    {% endfor %}
+
+{% else %}
+    <div class="panel panel-warning">
+        <div class="panel-heading">
+            <span class="">No emails found</span>
+        </div>
+    </div>
+{% endif %}
+{#{% endblock %}#}
