--- a/howler/wally_search/templates/wally/search.html
+++ b/howler/wally_search/templates/wally/search.html
@@ -2,87 +2,95 @@
 
 {% block main %}
     <div class="row">
-        <div class='col-md-10'>
-            <h1 class="page-header">Email search</h1>
+        <div class='col-md-11'>
+            <!--<h1 class="page-header">Email search</h1>
             <p>Welcome to Wally the email search! Please input at least one of the fields below to search your
-                emails.</p>
+                emails.</p>-->
 
             {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
         </div>
     </div>
-    <form action="{% url 'wally:find' %}" method="get">
-        <div class="row">
-            <div class='col-md-11'>
-                <div class="form-group">
-                    <label for="query">Full-text search</label>
-                    <input type="text" class="form-control" name="query" class="fulltext" id="query"
-                           placeholder="Full-text search"/>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class='col-md-2'>
-                <div class="form-group">
-                    <label for="date_sliding_value">Only search in last</label>
-                    <div class="input-group">
-                        <input type="text" class="form-control" id="date_sliding_value" name="date_sliding_value" value="5">
+
+    <form id="js_searchform" action="{% url 'wally:find' %}" method="get">
+        <div class="panel panel-default">
+
+            <div class="panel-heading">
+                <div class="row">
+                    <div class='col-md-9'>
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="query" class="fulltext" id="query"
+                                   placeholder="Full-text search"/>
+                        </div>
+                    </div>
+                    <div class='col-md-1'>
+                        <button type="submit" class="btn btn-primary">Search</button>
+                    </div>
+                    <div class='col-md-2'>
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" name="include_spam" id="include_spam"/> search in spam
+                            </label>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class='col-md-2'>
-                <div class="form-group">
-                    <label for="date_sliding_type">Duration type</label>
-                    <div class="input-group">
-                        <select class="form-control" id="date_sliding_type" name="date_sliding_type">
-                            <option value="y" selected="selected">Years</option>
-                            <option value="M">Month</option>
-                            <option value="d">Days</option>
-                        </select>
+            <div class="panel-body">
+                <div class="row">
+                    <div class='col-md-2'>
+                        <div class="form-group">
+                            <label for="date_sliding_value">Only search in last</label>
+                            <div class="input-group">
+                                <input type="text" class="form-control" id="date_sliding_value"
+                                       name="date_sliding_value" value="5">
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class='col-md-1'>
-                <h3 class="text-primary">OR</h3>
-            </div>
-            <div class='col-md-3'>
-                <div class="form-group">
-                    <label for="from">From</label> - JST time
-                    <div class='input-group date' id='datetimepicker-from'>
-                        <input type='text' class="form-control" name="from" placeholder="2012/11/01 00:00"/>
-                        <span class="input-group-addon">
+                    <div class='col-md-2'>
+                        <div class="form-group">
+                            <label for="date_sliding_type">Duration type</label>
+                            <div class="input-group">
+                                <select class="form-control" id="date_sliding_type" name="date_sliding_type">
+                                    <option value="y" selected="selected">Years</option>
+                                    <option value="M">Month</option>
+                                    <option value="d">Days</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class='col-md-1'>
+                        <h3 class="text-primary">OR</h3>
+                    </div>
+                    <div class='col-md-3'>
+                        <div class="form-group">
+                            <label for="from">From</label> - JST time
+                            <div class='input-group date' id='datetimepicker-from'>
+                                <input type='text' class="form-control" name="from" placeholder="2012/11/01 00:00"/>
+                                <span class="input-group-addon">
                                 <span class="glyphicon glyphicon-calendar"></span>
                             </span>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class='col-md-3'>
-                <div class="form-group">
-                    <label for="to">To</label> - JST time
-                    <div class='input-group date' id='datetimepicker-to'>
-                        <input type='text' class="form-control" name="to" placeholder="2016/10/31 12:18"/>
-                        <!--type="datetime-local"-->
-                        <span class="input-group-addon">
+                    <div class='col-md-3'>
+                        <div class="form-group">
+                            <label for="to">To</label> - JST time
+                            <div class='input-group date' id='datetimepicker-to'>
+                                <input type='text' class="form-control" name="to" placeholder="2016/10/31 12:18"/>
+                                <!--type="datetime-local"-->
+                                <span class="input-group-addon">
                                 <span class="glyphicon glyphicon-calendar"></span>
                             </span>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class='col-md-5'>
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" name="include_spam" id="include_spam"/> include spam
-                    </label>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class='col-md-5'>
-                <input type="submit" value="Search"/>
             </div>
         </div>
     </form>
+
+    <div id="js_result">
+
+    </div>
     {##}
     {#POST:#}
     {#<form action="{% url 'wally:wally' %}" method="post">#}
