--- a/howler/wally_search/templates/wally/base_wally.html
+++ b/howler/wally_search/templates/wally/base_wally.html
@@ -8,7 +8,7 @@
 
 {% block sidebar %}
     <ul class="nav nav-sidebar">
-        <li class="active"><a href="{% url 'wally:search' %}">Email Search <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="{% url 'wally:search' %}">Email search <span class="sr-only">(current)</span></a></li>
 
     </ul>
 {% endblock %}
