--- a/howler/templates/base.html
+++ b/howler/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -11,7 +12,7 @@
     <meta name="author" content="">
     <link rel="icon" href="{% static 'img/favicon.ico' %}">
 
-    <title>Howler email search</title>
+    <title>{% trans "Howler email search" %}</title>
 
     <link rel="stylesheet" href="{% static 'style.css' %}"/>
 
@@ -33,7 +34,7 @@
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
                     aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
+                <span class="sr-only">{% trans "Toggle navigation" %}</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -51,7 +52,7 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <!--<li><a href="{% url 'wally:search' %}">Search</a></li>-->
-                <li><a href="#">Settings</a></li>
+                <li><a href="#">{% trans "Settings" %}</a></li>
                 <!--<li><a href="#">Help</a></li>-->
             </ul>
 {#            <form class="navbar-form navbar-right" action="{% url 'wally:find' %}" method="get">#}
