--- a/howler/wally_search/templates/wally/base_wally.html
+++ b/howler/wally_search/templates/wally/base_wally.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% load static %}
+{% load i18n %}
 
 {% block head %}
     <link rel="stylesheet" href="{% static "wally/style_wally.css" %}"/>
@@ -8,7 +9,7 @@
 
 {% block sidebar %}
     <ul class="nav nav-sidebar">
-        <li class="active"><a href="{% url 'wally:search' %}">Email search <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="{% url 'wally:search' %}">{% trans "Email search" %} <span class="sr-only">(current)</span></a></li>
 
     </ul>
 {% endblock %}
