Added new translations Added language switcher

--- a/howler/wally_search/templates/wally/results.html
+++ b/howler/wally_search/templates/wally/results.html
@@ -58,7 +58,7 @@
             <div class="panel-body">
                 {% if hit.meta.highlight.replyToEmail.0 %}
                     <p class="fragment">
-                        <b>{% trans "Hit in Reply-To/Email/Name:" %}
+                        <b>{% trans "Hit in Reply-To Email/Name:" %}
                         </b>
                         {{ hit.meta.highlight.replyToEmail.0|safe }} {{ hit.meta.highlight.replyToName.0|safe }}
                     </p>
