--- a/howler/wally_search/templates/wally/search.html
+++ b/howler/wally_search/templates/wally/search.html
@@ -30,7 +30,7 @@
                     <div class='col-md-2'>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" name="include_spam" id="include_spam"/> {% trans "search in spam" %}
+                                <input type="checkbox" name="include_spam" id="include_spam"/> {% trans "search in spam as well" %}
                             </label>
                         </div>
                     </div>
@@ -40,7 +40,7 @@
                 <div class="row">
                     <div class='col-md-2'>
                         <div class="form-group">
-                            <label for="date_sliding_value">{% trans "Only search in past" %}</label>
+                            <label for="date_sliding_value">{% trans "Within the past" %}</label>
                             <div class="input-group">
                                 <input type="text" class="form-control" id="date_sliding_value"
                                        name="date_sliding_value" value="5">
