--- a/howler/templates/base.html
+++ b/howler/templates/base.html
@@ -55,10 +55,29 @@
                 <li><a href="#">{% trans "Settings" %}</a></li>
                 <!--<li><a href="#">Help</a></li>-->
             </ul>
-{#            <form class="navbar-form navbar-right" action="{% url 'wally:find' %}" method="get">#}
-{#                <input type="text" class="form-control" name="query" class="fulltext" id="query"#}
-{#                       placeholder="Email search..."/>#}
-{#            </form>#}
+
+
+            <form class="navbar-form navbar-right" action="{% url 'set_language' %}" method="post">{% csrf_token %}
+                <input name="next" type="hidden" value="{{ redirect_to }}"/>
+                <select name="language" id="js_lang_select" class="form-control">
+                    {% get_current_language as LANGUAGE_CODE %}
+                    {% get_available_languages as LANGUAGES %}
+                    {% get_language_info_list for LANGUAGES as languages %}
+                    {% for language in languages %}
+                        <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %}
+                                selected="selected"{% endif %}>
+                            {{ language.name_local }} ({{ language.code }})
+                        </option>
+                    {% endfor %}
+                </select>
+                <!--<button type="submit" class="btn btn-default">Go</button>-->
+            </form>
+
+
+            {#            <form class="navbar-form navbar-right" action="{% url 'wally:find' %}" method="get">#}
+            {#                <input type="text" class="form-control" name="query" class="fulltext" id="query"#}
+            {#                       placeholder="Email search..."/>#}
+            {#            </form>#}
         </div>
     </div>
 </nav>
@@ -86,6 +105,7 @@
 <script type="text/javascript" src="{% static 'moment/locale/ja.js' %}"></script>
 <script type="text/javascript"
         src="{% static 'eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'howler.js' %}"></script>
 
 {% block scripts %}
 
