Manage synonyms from web-interface

--- a/howler/wally_search/templates/wally/synonyms/index.html
+++ b/howler/wally_search/templates/wally/synonyms/index.html
@@ -23,4 +23,9 @@
             </div>
         </div>
     {% endif %}
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <span class=""><a href="{% url 'wally:synonymsindex' %}">Update synonyms to index</a></span>
+        </div>
+    </div>
 {% endblock %}
