--- a/howler/wally_search/templates/wally/search.html
+++ b/howler/wally_search/templates/wally/search.html
@@ -30,7 +30,8 @@
                     <div class='col-md-2'>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" name="include_spam" id="include_spam"/> {% trans "search in spam as well" %}
+                                <input type="checkbox" name="include_spam"
+                                       id="include_spam"/> {% trans "search in spam as well" %}
                             </label>
                         </div>
                     </div>
@@ -91,8 +92,6 @@
             </div>
         </div>
     </form>
-
-    <div class="glyphicon loading collapse"></div>
 
     <div id="js_result">
 
